# SLAM-Learning

homework_1/: CMakeLists.txt  namePicture.cpp  作业
homework_11/: CMakeLists.txt  epipolar.cpp  矩阵分解
homework_12/: CMakeLists.txt  opencv学习  virtual-billboard (复件).cpp  virtual-billboard.cpp
homework_13/practice_pointCloudFusion/: CMakeLists.txt  点云学习
homework_13/practice_pointCloudFusion/data/: cameraTrajectory.txt
homework_13/practice_pointCloudFusion/include/: slamBase.hpp
homework_13/practice_pointCloudFusion/src/: CMakeLists.txt  pointCloudFusion.cpp  slamBase.cpp
homework_14/fliter/: CMakeLists.txt  输出点云
homework_14/fliter/src/: CMakeLists.txt  pointCloudFilter.cpp
homework_15/smoothing/: CMakeLists.txt  点云采样方法
homework_15/smoothing/src/: pointCloud2Mesh.cpp
homework_16/vixel/: CMakeLists.txt  重建方法
homework_16/vixel/src/: CMakeLists.txt  pointCloud2Mesh.cpp
homework_17/projectg2o/: BA-3Dto2D.cpp
homework_18/perfect_g2o/: CMakeLists.txt  directBA.cpp
homework_19_20/: CMakeLists.txt
homework_19_20/homework_19_20/: icp (复件).cpp  icp.cpp  icp00.cpp
homework_19_20/╫ў╥╡20-ICP╙ж╙├╩╡╝∙-┤·┬ы┐Є╝▄/: icp.cpp
homework_19_20/参考/: CMakeLists.txt  icp.cpp
homework_2/: CMakeLists.txt  Eigen.cpp  作业
homework_21-四元数插值-代码框架/: CMakeLists.txt  slerpQuaternion.cpp
homework_3/: CMakeLists.txt  cppNewFeather.cpp  作业
homework_4/: CMakeLists.txt  classCross.cpp  cross.cpp  作业
homework_5/: CMakeLists.txt  result.txt  rotationTransforms.cpp  作业
homework_6/: 作业
homework_7/: 1jpg
homework_8/: CMakeLists.txt  draw_trajectory.cpp  trajectory.txt  作业
homework_9/: CMakeLists.txt  undistort_image.cpp
